force-app/main/default/objects/Contact/fields/Agree_to_Share_Email__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Share_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Share Email</label>
    <type>Checkbox</type>
</CustomField>