force-app/main/default/objects/Contact/fields/Agree_to_Share_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Share_Phone_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Share Phone Number</label>
    <type>Checkbox</type>
</CustomField>