force-app/main/default/objects/Contact/fields/Assignee_ID__c.field-meta.xml
<CustomField>
    <fullName>Assignee_ID__c</fullName>
    <externalId>true</externalId>
    <label>Individual ID</label>
    <type>AutoNumber</type>
</CustomField>