force-app/main/default/objects/Contact/fields/Calendaring_Activated__c.field-meta.xml
<CustomField>
    <fullName>Calendaring_Activated__c</fullName>
    <formula>NOT ISBLANK(Topia_Link__c)</formula>
    <label>Calendaring Activated</label>
    <type>Checkbox</type>
</CustomField>