force-app/main/default/objects/Contact/fields/Client_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Notes</label>
    <length>2400</length>
    <type>LongTextArea</type>
</CustomField>