force-app/main/default/objects/Contact/fields/Country_Location__c.field-meta.xml
<CustomField>
    <fullName>Country_Location__c</fullName>
    <label>Country (Location)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>