force-app/main/default/objects/Contact/fields/Country_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Location_Name__c</fullName>
    <description>JIRA:AGMPB-785</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country (Location) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>