force-app/main/default/objects/Contact/fields/Country_Supports__c.field-meta.xml
<CustomField>
    <fullName>Country_Supports__c</fullName>
    <label>Country (Supports)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>