force-app/main/default/objects/Contact/fields/Email_Preference__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference__c</fullName>
    <label>Email Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>