force-app/main/default/objects/Contact/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Compliance</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>Payroll Support</fullName>
            </value>
            <value>
                <fullName>Employment Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>