force-app/main/default/objects/Contact/fields/First_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Login_Date__c</fullName>
    <description>Displays the date and time the staff user logged into the system. Automatically populated from the linked User record for monitoring system acces.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Login Date</label>
    <type>DateTime</type>
</CustomField>