force-app/main/default/objects/Contact/fields/Frozen_Date__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Date__c</fullName>
    <description>This field stores the date on which the related user is scheduled to be deactivated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Frozen Date</label>
    <type>DateTime</type>
</CustomField>