force-app/main/default/objects/Contact/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>This field used to store Linked URL of User.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>