force-app/main/default/objects/Contact/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>