force-app/main/default/objects/Contact/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the full phone number in local format, starting with the country code (e.g., +49 151 12345678).</inlineHelpText>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>