force-app/main/default/objects/Contact/fields/Spouse_Email__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Spouse Email</label>
    <type>Email</type>
</CustomField>