force-app/main/default/objects/Contact/fields/Spouse_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Spouse Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>