force-app/main/default/objects/Contact/fields/Spouse_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse Provisioned</label>
    <type>Checkbox</type>
</CustomField>