force-app/main/default/objects/Contact/fields/Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>Staff_ID__c</fullName>
    <externalId>true</externalId>
    <label>Staff ID</label>
    <type>AutoNumber</type>
</CustomField>