force-app/main/default/objects/Contact/fields/Staff_Level__c.field-meta.xml
<CustomField>
    <fullName>Staff_Level__c</fullName>
    <description>Indicates the professional rank of the staff contact. Used to define responsibilities, support escalation paths, and enable role-based reporting and filtering.</description>
    <label>Staff Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Senior Associate</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>