force-app/main/default/objects/Contact/fields/Topia_Link__c.field-meta.xml
<CustomField>
    <fullName>Topia_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Topia Link</label>
    <type>Url</type>
</CustomField>