force-app/main/default/objects/Contact/fields/Type_of_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Identification_Number__c</fullName>
    <label>Type of Identification Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ID_Number_Type</valueSetName>
    </valueSet>
</CustomField>