force-app/main/default/objects/Contact/recordTypes/Business_Contact.recordType-meta.xml
<RecordType>
    <fullName>Business_Contact</fullName>
    <active>false</active>
    <label>Business Contact</label>
</RecordType>