force-app/main/default/objects/Contact/validationRules/Contact_VR01_RestrictEmailUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_VR01_RestrictEmailUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Email) &amp;&amp; NOT(ISBLANK(User__c))</errorConditionFormula>
    <errorMessage>Contact_VR01: Please update the email through User record.</errorMessage>
</ValidationRule>