force-app/main/default/objects/Contact/validationRules/Contact_VR03_ClientContactsOnlyClientAcc.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_VR03_ClientContactsOnlyClientAcc</fullName>
    <active>true</active>
    <description>JIRALAGMPB-785</description>
    <errorConditionFormula>AND(
    $RecordType.Name = &quot;Client Contact&quot;,
    Account.RecordType.Name &lt;&gt; &quot;Client&quot;
)</errorConditionFormula>
    <errorMessage>Contact_VR03: Client Contacts can only be added to Client Accounts.</errorMessage>
</ValidationRule>