force-app/main/default/objects/Contact/validationRules/Contact_VR04_StaffCountryMatchFirm.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_VR04_StaffCountryMatchFirm</fullName>
    <active>true</active>
    <description>JIRA:AGMPB-785</description>
    <errorConditionFormula>AND( $CustomMetadata.DisableAutomation__mdt.Contact.IsActiveValidationRule__c = TRUE,
  $RecordType.Name = &quot;Staff&quot;,
  TEXT(Country_Location__c) &lt;&gt; TEXT(Account.Office_Country__c)
)</errorConditionFormula>
    <errorMessage>Contact_VR04:  Office Country must match Contact’s Country Location for this Firm.</errorMessage>
</ValidationRule>