force-app/main/default/objects/Contact/validationRules/Contact_VR06_RequireFirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_VR06_RequireFirstName</fullName>
    <active>true</active>
    <description>JIRA:AGMPB-829</description>
    <errorConditionFormula>AND(
     $CustomMetadata.DisableAutomation__mdt.Contact.IsActiveValidationRule__c  = TRUE,
    ISBLANK(FirstName)
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Contact_VR06: The First Name field must be populated</errorMessage>
</ValidationRule>