force-app/main/default/objects/Contact/validationRules/Restrict_Email_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Email_Update</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Email) &amp;&amp; NOT(ISBLANK(User__c))</errorConditionFormula>
    <errorMessage>Please update the email through User record.</errorMessage>
</ValidationRule>