force-app/main/default/objects/Contact/listViews/All_Client_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Client_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Client_Contact</value>
    </filters>
    <label>All Client Contacts</label>
</ListView>