force-app/main/default/objects/Contact/listViews/All_Staff_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Staff_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Staff_Level__c</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Staff</value>
    </filters>
    <label>All Staff Contacts</label>
</ListView>